[package]
name = "csd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.13.4", features = ["stream"] }
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"
tar = "0.4"
